--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 	<!-- <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'> -->
 	<link rel="stylesheet/less" href="cake.less">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
-	
 </head>
 
 <body>
@@ -36,10 +35,10 @@
         <source src="as.mp4" type="audio/ogg">
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">V</h2>
+    	<h2 style="color:#F2B300;">W</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">I</h2>
+    	<h2 style="color:#0719D4;">A</h2>
     </div>
 	<div class="balloons text-center" id="b3">
     	<h2 style="color:#D14D39;">N</h2>
@@ -99,80 +98,54 @@
 				</div>
 			</div>
 		</div>
-
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Haii Vinaa...</p>
+				<p>Halo Wana...</p>
 				<p>Hari Ini...</p>
-				<p>Tepat 20 Tahun Lalu</p>
-				<p>Kau hadir Di Dunia Ini</p>
-				<p>Ya...</p>
-				<p>2 Mei 2000</p>
+				<p>Hari Seperti Biasanya Ditengah Pandemi</p>
+				<p>Tapi Ada yang spesial</p>
+				<p>Satu tahun telah berlalu</p>
+				<p>Kini 22 usiamu</p>
 				<p><strong>....</strong></p>
 				<p>Do you know..?</p>
-				<p>Kamu itu spesial</p>
-				<p>Pertama Ketemu</p>
+				<p>First Impresionku</p>
+				<p>Pertama Ketemu </p>
 				<p>Kamu orangnya diam..</p>
 				<p>cuek..</p>
 				<p>sombong..</p>
 				<p>tapiii</p>
-				<p>hanya Perlu satu senyuman..</p>
-				<p>satu senyuman darimu </p>
-				<p>mengubah segala persepsiku</p>
-				<p>senyuman itu </p>
-				<p>bisa membuat orang lain ikut bahagia</p>
-				<p>so kept smile VINAA</p>
-				<p>Hari Ini hari ulang tahunmu</p>
-				<p>so special to yoU</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
-				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>Kamu itu orangnya..</p>
-				<p>Baik</p>
-				<p>Teruss..</p>
-				<p>Cepat Akrab Dengan orang</p>
-				<p>Tidak nyangkaka juga bisa dekat sama kamu</p>
-				<p>Intinyaaa</p>
-				<p>Semoga di umurmu yang bertambah ini</p>
-				<p>Kamu bisa jadi lebih dewasa</p>
-				<p>Tetap redah hati</p>
-				<p>Panjang Umur</p>
-				<p>Bahagia Selalu</p>
-				<p>Kurangin mengeluhnya </p>
-				<p>but its okay..</p>
+				<p>Ternyata</p>
+				<p>Kamu itu orangnya baik </p>
+				<p>kamu care</p>
+				<p>kamu rajin masak</p>
+				<p>seru diajak cerita</p>
+				<p>tapi kamu itu</p>
+				<p>Jangan terlalu sering marah</p>
+				<p>^-^</p>
+				<p>Bundahara Terbaik</p>
+				<p>Keliatanya sangar</p>
+				<p>Tapi</p>
+				<p>Yang paling pertama nangis</p>
+				<p>Pas mau penarikan</p>
+				<p>Paling diincar sama pemda</p>
+				<p>Pokoknya Selamat Ulang Tahun</p>
+				<p>Hanya Ini yang bisa kubuat</p>
+				<p>Sebagai hadiah ulang tahun</p>
+				<p>meskipun </p>
+				<p>sebenarnya..</p>
+				<p>samaanki ulang tahun</p>
+				<p>Ya 4 Mei</p>
+				<p>Tapi beda 2 tahun</p>
+				<p>Intinya semoga di ulang tahun </p>
+				<p>kali ini</p>
+				<p>semua impian mu tercapai</p>
+				<p>panjang umur</p>
+				<p>dan sehati selalu </p>
+				<p>Wish You All The Best KK Andalng di posko</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>Happy Birthday Vinaa </p>
-				<p>Tetap jadi Vinaa yang Kukenal</p>
-			</div>
-		</div>
-		<div id="slider">
-			<div id="slide-holder">
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a1.jpg" alt="" /></div>
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a3.jpg" alt="" /></div>
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a2.jpg" alt="" /></div>
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a4.jpg" alt="" /></div>
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a15.jpg" alt="" /></div>
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a19.jpg" alt="" /></div>
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a7.jpg" alt="" /></div>
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a18.jpg" alt="" /></div>
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a9.jpg" alt="" /></div>
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a10.jpg" alt="" /></div>
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a11.jpg" alt="" /></div>
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a12.jpg" alt="" /></div>
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a13.jpg" alt="" /></div>
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a14.jpg" alt="" /></div>
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a15.jpg" alt="" /></div>
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a16.jpg" alt="" /></div>
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a17.jpg" alt="" /></div>
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a18.jpg" alt="" /></div>
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a19.jpg" alt="" /></div>
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a20.jpg" alt="" /></div>
-				<div class="slide"><img style="max-height: 300px; display: block; margin: auto; max-width: 170px;" src="a21.jpg" alt="" /></div>
+				<p>Happy Birthday Wana </p>
+				<p>RIJANG PANUA FOREVER</p>
 			</div>
 		</div>
 		
@@ -190,7 +163,6 @@
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
-
 			<!-- <div class="col-md-2">
 			</div>
 			<div class="col-md-2">
@@ -203,7 +175,6 @@
 			</div> -->
 		</div>
 	</div>
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="effect.js"></script>
